--- a/research_prop.tex
+++ b/research_prop.tex
@@ -11,11 +11,11 @@
 \begin{document}
 \maketitle
 
-With the opening of the 2026 winter Olympic games, just over a day before the official opening ceremonies the Finnish women's hockey had to postpone their first game against Canada due to an outbreak of Norovirus. with 13 of the Finnish players being infected or in quarantine. This number has now grown with members of the Switzerland woman's ice hockey joining the list of athletes in isolation after one member of their team has had a conformed case of Norovirus. With this localized outbreak across now multiple team of the current on going olympics, the question arose on how an epidemic of a small closed population such as the Olympic village would look compared to that of varying sized dynamic population.  As within the Olympic village many assumptions about the population can be made due the nature the games.  The villages are typically closed heterogenous populations with people from different countries and therefore drastically different genetics. This is also a new concept as far as olympic games and possibility of different infectious diseases over the course of many years such as the Tokyo 2020, Beijing 2022, Vancouver 2010 and Rio 2016.  Due to the unique nature of the games and how much athletes and other essential staff such as different trainers and coaches interact and how this contrasts compared to smaller communities of similar size of approximate 15000 people and larger more dynamic populations. Looking at the graphical differences and how the dynamics of the Olympic village affect specific epidemiological models. 
+With the beginning of the 2026 winter Olympic games, just over a day before the official opening ceremonies the Finnish women's hockey had to postpone their first game against Canada due to an outbreak of Norovirus. With 13 of the Finnish players being infected or in quarantine. This number has now grown with members of the Switzerland woman's ice hockey joining the list of athletes in isolation after one member of their team has had a conformed case of Norovirus. With this localized outbreak across now multiple team of the current on going olympics, the question arose on how an epidemic of a small closed population such as the Olympic village would look compared to that of varying sized dynamic population.  As within the Olympic village many assumptions about the population can be made due the nature the games.  The villages are typically closed heterogenous populations with people from many different countries living together within close quarters. This is also isn't a new consideration as far as olympic games and possibility of different infectious disease outbreak over the course of many separate such as the Tokyo 2020, Beijing 2022, Vancouver 2010 and Rio 2016.  Due to the unique nature of the games and how much athletes and other essential staff such as different trainers and coaches interact and how this contrasts compared to smaller communities of similar size of approximate 15000 people and larger more dynamic populations. Looking at the graphical differences and how the dynamics of the Olympic village affect specific epidemiological models. 
 
 \section{control repository}
 \url{https://github.com/chaytorericka/Math2030Mod2}
 \bibliography{prop_refs}
 \bibliographystyle{plain}
-
+\nocite{*}
 \end{document}  
