start of intro and further format changes

--- a/inital_research_report.tex
+++ b/inital_research_report.tex
@@ -18,11 +18,15 @@
 \section*{Abstract}
 
 \section*{Introduction}
+With 2026 being the year of the Milano Cortina Winter Olympics many reoccurring social, economic and theoretical questions are asked. This year on February 5th, a press release was issues as many players on the Finnish women's ice hockey team having been infected with Norovirus or being in isolation leading to the postponement of their first game of this Olympics \cite{salvian_2026_finlandcanada}. This theme continued later into the games when a member of the Switzerland women's ice hockey team also had contracted Norovirus and some additional teammates being but in isolation. the possibility of an epidemic event at the olympics has been heavily discussed over the course of the last decade spanning both summer and winter games; from the Vancouver 2010 with the threat of H1N1, Rio 2016 with Zika virus and with the Tokyo 2020 games and the Beijing 2022 games being impacted by the Covid-19 global pandemic. The threat of an epidemic event occurring due to the games has been likely, especially being closely monitored with regards of the increased travel that the olympics being to an area during a time of increase risk. One interesting aspects with respect to this is the dynamics that are consequences of the nature of the games inside the Olympic village with the gathering on thousands of individuals from hundreds of countries living closely together and along they may have separate "country buildings" there is a magnitude of common spaces not to mention the inter-athlete interactions during completion and for other official events surrounding the games such as organized ceremonies, exhibitions and pin trading. 
+
 
 \section*{Methods}
 
 \section*{Results}
 
 \section*{Conclusion} 
+\bibliography{mod2-References}
+\bibliographystyle{plain}
 
 \end{document}  
