some source additions

--- a/mod2-References.tex
+++ b/mod2-References.tex
@@ -7,3 +7,21 @@
   organization = {The New York Times},
   journal = {The New York Times}
 }
+@incollection{allen2008introduction,
+  title={An introduction to stochastic epidemic models},
+  author={Allen, Linda JS},
+  booktitle={Mathematical epidemiology},
+  pages={81--130},
+  year={2008},
+  publisher={Springer}
+}
+@article{yan2006seir,
+  title={SEIR epidemic model with delay},
+  author={Yan, Ping and Liu, Shengqiang},
+  journal={The ANZIAM Journal},
+  volume={48},
+  number={1},
+  pages={119--134},
+  year={2006},
+  publisher={Cambridge University Press}
+}
