--- a/mod2-References.tex
+++ b/mod2-References.tex
@@ -25,3 +25,13 @@
   year={2006},
   publisher={Cambridge University Press}
 }
+@article{shapiro2021adaptive,
+  title={adaptive susceptible-infectious-removed model for continuous estimation of the COVID-19 infection rate and reproduction number in the United States: Modeling study},
+  author={Shapiro, Mark B and Karim, Fazle and Muscioni, Guido and Augustine, Abel Saju},
+  journal={Journal of Medical Internet Research},
+  volume={23},
+  number={4},
+  pages={e24389},
+  year={2021},
+  publisher={JMIR Publications Toronto, Canada}
+}
