additions to methods section

--- a/inital_research_report.tex
+++ b/inital_research_report.tex
@@ -36,7 +36,7 @@ where $\beta > 0$ is the constant rate,$ \gamma > 0 $ is equal to the recovery r
 	\end{split}
 \end{align}
 
-where $\beta > 0, \gamma > 0, b >= 0 $ and N the total population satisfies $ N = S(t) + I(t)  + R(t) $ and also satisfies the initial conditions $ S(0) > 0, I(0)> 0, R(0) \geq 0$. This model is commonly used for childhood diseases such as chicken pox whereby after an Individual has been infected they then are immune \cite{allen2008introduction}. Therefore limiting the possibilities of the model within a controlled population such as the Olympic village. Along with the multitude of  protocols regarding disease including isolation policies recently displayed by the small Norovirus outbreak at the 2026 olympics the possibility of in individual or athletes coming into the games with in active infection would be low. Due to this a more accurate model for this type of population would includes a delay factor so a SEIR (Susceptible, Exposed, Infectious, Recovered) model which includes a latent delay constant  $\tau$ \cite{yan2006seir}, would be a suitable and simple model to base theoretical models on. The dynamics of this system are modelled by:
+where $\beta > 0, \gamma > 0, b >= 0 $ and N the total population satisfies $ N = S(t) + I(t)  + R(t) $ and also satisfies the initial conditions $ S(0) > 0, I(0)> 0, R(0) \geq 0$. This model is commonly used for childhood diseases such as chicken pox whereby after an Individual has been infected they then are immune \cite{allen2008introduction}. Therefore limiting the possibilities of the model within a controlled population such as the Olympic village. Along with the multitude of  protocols regarding disease including isolation policies recently displayed by the small Norovirus outbreak at the 2026 olympics the possibility of in individual or athletes coming into the games with in active infection would be low. Due to the added delay and exposed category it becomes a accurate model for this type of population and type of infectious disease a SEIR (Susceptible, Exposed, Infectious, Recovered) model which includes a latent delay constant  $\tau$ \cite{yan2006seir}, would be a suitable and simple model to base theoretical models on. The dynamics of this system are modelled by:
 
 \begin{align}
 	\begin{split}
@@ -47,7 +47,7 @@ where $\beta > 0, \gamma > 0, b >= 0 $ and N the total population satisfies $ N 
 	\end{split}
 \end{align}
 
-S(t) is the susceptible, I(t) is infected , R(t) is the recovered and E(t) is the exposed the sum of these values are equal to N(t) the total population. $\mu$ is the death rate due to causes other than disease. $\gamma$ is the number of contacts multiplied by the probability of infection as a function of time, $\alpha$ is the removal rate and $ b $ is the per capita birth rate with $ b > \mu $ $f$ is the probability $f(0\leq f\geq 1)$ that the individual recovers and acquires permanent immunity  and $\tau$ is the latent period.\cite{an2006seir} With the introduction of the latent period this becomes a great base model for the possibility of an epidemic at the olympic games.
+S(t) is the susceptible, I(t) is infected , R(t) is the recovered and E(t) is the exposed the sum of these values are equal to N(t) the total population. $\mu$ is the death rate due to causes other than disease. $\gamma$ is the number of contacts multiplied by the probability of infection as a function of time, therefore is equal to the transmission rate of the modelled disease. $\alpha$ is the removal rate and $ b $ is the per capita birth rate with $ b > \mu $ $f$ is the probability $f(0\leq f\geq 1)$ that the individual recovers and acquires permanent immunity  and $\tau$ is the latent period.\cite{an2006seir} With the introduction of the latent period this becomes a great base model for the possibility of an epidemic at the olympic games.
 
  \section*{Methods}
  
@@ -61,12 +61,13 @@ S(t) is the susceptible, I(t) is infected , R(t) is the recovered and E(t) is th
 	\frac{dR(t)}{dt}=f{\alpha}I(t),
 	\end{split}
 \end{align}
-Using Python version 3.13.7 with imported package numpy, scripy and matplotlib to display models that would display possible epidimic conditions inside the olympic games. The removal rate $\alpha $ was based of values using in simlar models from the Covid-19 pandemic with $\alpha = \frac{1}{6}$ \cite{ shapiro2021adaptive}. On averages althetes tend to start to arrive at the games 7-10 days before opening ceremonies and tend to leave shortly after their events finnish due to Covid-19 protocols still in place post the Tokyo 2020 Olympics. \cite 
+Using Python with imported package numpy  and matplotlib to display models that would display possible epidemic conditions inside the olympic games. The removal rate $\alpha $ was based of values using in similar models from the Covid-19 pandemic with $\alpha = \frac{1}{6}$ \cite{ shapiro2021adaptive}. On averages athletes tend to start to arrive at the games 7-10 days before opening ceremonies and tend to leave shortly after their events finish due to Covid-19 protocols still in place post the Tokyo 2020 Olympics. Meaning the village can only have a largest possible time span of 30 day if the turnover to Paralympics is not included and as this would be a totally new population it is not included with the village time allowance. then using average incubation periods based on common averages of past epidemics  $\tau$ is set to 2.9 as the average delay \cite{cori2012estimating}. The transmission constant $\gamma$ can vary by disease and the value of the transmission rate is now a possible variable of interest to see what is the minimum possible value of $\gamma$ to cause a local epidemic in the olympic village for the summer and winter games and if this is a value within reason for a realistic disease that could be transmitted with the village under current conditions of the olympic village. 
+
 \section*{Results}
--> due the the popularity of the sports participating in the games and the types of sports including more team sports in the summer olympics there is a large disparity in the sizes of the villages the summer village for Paris 2024 was approximently  14500 athletes in the village compared to the smaller number of the current althetes in the Milano Cortina largest of the three villages is only approxiemently 1500 athletes which is a significant difference in population. 
+due the the popularity of the sports participating in the games and the types of sports including more team sports in the summer olympics there is a large disparity in the sizes of the villages the summer village for Paris 2024 was approximently  14500 athletes in the village compared to the smaller number of the current athletes in the Milano Cortina largest of the three villages is only approxiemently 1500 athletes which is a significant difference in population. 
 
 \section*{Conclusion} 
-->application to other international sporting events commonwealth games Pan American games jonoir olympics and world cups, tourdaments and circuits. And possible non sporting applications to similar living conditions such as boarding school and university residences. 
+application to other international sporting events commonwealth games Pan American games juiour olympics and world cups, tourdaments and circuits. And possible non sporting applications to similar living conditions such as boarding school and university residences. 
 
 \bibliography{mod2-References}
 \bibliographystyle{plain}
