--- a/mod2-References.tex
+++ b/mod2-References.tex
@@ -35,3 +35,15 @@
   year={2021},
   publisher={JMIR Publications Toronto, Canada}
 }
+
+@article{cori2012estimating,
+  title={Estimating influenza latency and infectious period durations using viral excretion data},
+  author={Cori, Anne and Valleron, Alain-Jacques and Carrat, Fabrice and Tomba, G Scalia and Thomas, Gilles and Bo{\"e}lle, Pierre-Yves},
+  journal={Epidemics},
+  volume={4},
+  number={3},
+  pages={132--138},
+  year={2012},
+  publisher={Elsevier}
+}
+
